--- a/Organizze/app/build.gradle
+++ b/Organizze/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -50,5 +51,7 @@ dependencies {
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
 
     implementation 'com.github.clans:fab:1.6.4'
+
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
 }
